# build-triage-ai-

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: DESIGN.md
src/build_triage/: __init__.py  analyzer.py  config.py  errors.py  github_client.py  main.py  metrics.py  models.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_api.py  test_errors.py  test_github_client.py  test_metrics.py
